@@ -95,7 +95,7 @@ function(package, dir, lib.loc = NULL,
                 bft <- paste(bf, ".tex", sep = "")
                 tryCatch(texi2dvi(file = bft, pdf = TRUE,
                                   clean = FALSE, quiet = 2L),
-                         error = function(e) 
+                         error = function(e)
                          result$latex[[f]] <<- conditionMessage(e))
                 ## <NOTE>
                 ## In case the texi2dvi() *output* was of interest, we
@@ -176,7 +176,7 @@ function(package, dir, lib.loc = NULL)
 ### remove all temporary files that were created.
 
 buildVignettes <-
-function(package, dir, lib.loc = NULL, quiet = TRUE)
+function(package, dir, lib.loc = NULL, quiet = TRUE, clean = TRUE)
 {
     vigns <- pkgVignettes(package = package, dir = dir, lib.loc = lib.loc)
     if(is.null(vigns)) return(invisible())
@@ -185,8 +185,10 @@ function(package, dir, lib.loc = NULL, quiet = TRUE)
     on.exit(setwd(wd))
     setwd(vigns$dir)
 
-    origfiles <- list.files()
+    ## should this recurse into subdirs?
+    origfiles <- list.files(all.files = TRUE)
     have.makefile <- "makefile" %in% tolower(origfiles)
+    file.create(".build.timestamp")
 
     pdfs <- character()
     for(f in vigns$docs) {
@@ -211,9 +213,13 @@ function(package, dir, lib.loc = NULL, quiet = TRUE)
         yy <- system(make)
         if(make == "" || yy > 0) stop("running 'make' failed")
     } else {
-        f <- list.files()
-        f <- f %w/o% c(pdfs, origfiles)
-        file.remove(f)
+        if(clean) {
+            f <- list.files(all.files = TRUE) %w/o% c(".", "..", pdfs)
+            newer <- sapply(f, function(x) file_test("-nt", x, ".build.timestamp"))
+            file.remove(f[newer])
+        }
+        f <- list.files(all.files = TRUE)
+        file.remove(f %w/o% c(".", "..", pdfs, origfiles))
     }
     invisible(NULL)
 }
